--- a/main.yml
+++ b/main.yml
@@ -27,8 +27,8 @@
   tasks:
     - import_tasks: tasks/install.yml
       tags: ['programs', 'build']
-    # - import_tasks: tasks/iterm2.yml
-    #   tags: ['iterm2', 'dotfiles']
+    - import_tasks: tasks/iterm2.yml
+      tags: ['iterm2', 'dotfiles']
     - import_tasks: tasks/dotfiles.yml
       tags: ['dotfiles']
     - import_tasks: tasks/vscode.yml
