--- a/playbook.yml
+++ b/playbook.yml
@@ -18,7 +18,7 @@
       oh_my_zsh_theme: robbyrussell-modified
       oh_my_zsh_install: yes
       users:
-        - username: '{{ ansible_env.USER }}'
+        - username: '{{ ansible_user }}'
       tags: ['zsh']
 
   tasks:
