--- a/tasks/vscode.yml
+++ b/tasks/vscode.yml
@@ -1,16 +1,16 @@
 
 - name: Ensure settings.json symlink for vscode exists
-  file:
+  ansible.builtin.file:
     src: "{{ ansible_env.HOME }}/.config/vscode/settings.json"
     dest: "{{ ansible_env.HOME }}/Library/Application\ Support/Code/User/settings.json"
     state: link
 - name: Ensure keybindings.json symlink for vscode exists
-  file:
+  ansible.builtin.file:
     src: "{{ ansible_env.HOME }}/.config/vscode/keybindings.json"
     dest: "{{ ansible_env.HOME }}/Library/Application\ Support/Code/User/keybindings.json"
     state: link
 - name: Ensure all vscode extensions are installed
-  include_role:
+  ansible.builtin.include_role:
     name: gantsign.visual-studio-code-extensions
   vars:
     users:
