--- a/playbook.yml
+++ b/playbook.yml
@@ -16,22 +16,12 @@
       tags: ['dock']
     - role: gantsign.oh-my-zsh
       oh_my_zsh_theme: robbyrussell-modified
-      oh_my_zsh_install: yes
+      oh_my_zsh_install: true
       users:
         - username: '{{ ansible_user }}'
       tags: ['zsh']
 
   tasks:
-    - local_action:
-        module: command
-        cmd: 'git --git-dir="{{ playbook_dir }}/files/dots/.oh-my-zsh/custom/plugins/{{ item }}/.git" rev-parse HEAD'
-      with_items:
-        - fzf-zsh-plugin
-      register: path_thingy
-      tags: ['test']
-    - debug:
-        msg: "{{ path_thingy.results|map(attribute='stdout') }}"
-      tags: ['test']
     - import_tasks: tasks/install.yml
       tags: ['programs', 'build']
     - import_tasks: tasks/iterm2.yml
