--- a/playbook.yml
+++ b/playbook.yml
@@ -23,11 +23,15 @@
       tags: ['zsh']
 
   tasks:
-    - import_tasks: tasks/install.yml
+    - name: install npm packages & potentially other non-homebrew programs
+      ansible.builtin.import_tasks: tasks/install.yml
       tags: ['programs', 'build']
-    - import_tasks: tasks/iterm2.yml
-      tags: ['iterm2', 'dotfiles']
-    - import_tasks: tasks/dotfiles.yml
-      tags: ['dotfiles']
-    - import_tasks: tasks/vscode.yml
-      tags: ['vscode', 'dotfiles']
+    - name: configure iTerm2
+      ansible.builtin.import_tasks: tasks/iterm2.yml
+      tags: ['iterm2']
+    - name: add custom zsh config & other dotfiles
+      ansible.builtin.import_tasks: tasks/dotfiles.yml
+      tags: ['dotfiles', 'zsh']
+    - name: configure vscode
+      ansible.builtin.import_tasks: tasks/vscode.yml
+      tags: ['vscode']
