ansible lint fix 2

--- a/default.config.yml
+++ b/default.config.yml
@@ -50,6 +50,7 @@ dockitems_persist:
 homebrew_installed_packages:
   - act
   - ansible
+  - ansible-lint
   - autoconf
   - automake
   - coreutils
