--- a/playbook.yml
+++ b/playbook.yml
@@ -23,15 +23,15 @@
       tags: ['zsh']
 
   tasks:
-    - name: install npm packages & potentially other non-homebrew programs
+    - name: Install npm packages & potentially other non-homebrew programs
       ansible.builtin.import_tasks: tasks/install.yml
       tags: ['programs', 'build']
-    - name: configure iTerm2
+    - name: Configure iTerm2
       ansible.builtin.import_tasks: tasks/iterm2.yml
       tags: ['iterm2']
-    - name: add custom zsh config & other dotfiles
+    - name: Add custom zsh config & other dotfiles
       ansible.builtin.import_tasks: tasks/dotfiles.yml
       tags: ['dotfiles', 'zsh']
-    - name: configure vscode
+    - name: Configure vscode
       ansible.builtin.import_tasks: tasks/vscode.yml
       tags: ['vscode']
