--- a/default.config.yml
+++ b/default.config.yml
@@ -185,16 +185,17 @@ vscode_extensions:
   - yummygum.city-lights-theme
 
 ohmyzsh_plugins:
-- git
-- fzf-zsh-plugin
+  - git
+  - fzf-zsh-plugin
 
 config_folder:
-- bat
-# - git
+  - bat
+  - vscode
+  - git
 # - iTerm2
-# - karabiner
-# - neofetch
-# - sqlite3
-# - tmux
+  - karabiner
+  - neofetch
+  - sqlite3
+  - tmux
 # - vim
-# - linearmouse
+  - linearmouse
