split up "dotfiles" and "zsh" into seperate task files

--- a/playbook.yml
+++ b/playbook.yml
@@ -23,15 +23,15 @@
       tags: ['zsh']
 
   tasks:
+    - name: Copy dotfiles for a bunch of programs
+      ansible.builtin.import_tasks: tasks/dotfiles.yml
+      tags: ['dotfiles']
+    - name: Add custom zsh config
+      ansible.builtin.import_tasks: tasks/zsh.yml
+      tags: ['zsh']
     - name: Configure iTerm2
       ansible.builtin.import_tasks: tasks/iterm2.yml
       tags: ['iterm2']
-    - name: Configure vscode
-      ansible.builtin.import_tasks: tasks/vscode.yml
-      tags: ['vscode']
-    - name: Add custom zsh config & other dotfiles
-      ansible.builtin.import_tasks: tasks/dotfiles.yml
-      tags: ['dotfiles', 'zsh']
     - name: Configure vscode
       ansible.builtin.import_tasks: tasks/vscode.yml
       tags: ['vscode']
