improve CI performance by skipping certain things
testing if every single brew package can be installed in CI is not
needed, likewise testing if updating the dock works also isn't all
that great in CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
     runs-on: macos-latest
     env:
       ANSIBLE_FORCE_COLOR: '1'
+      CI: 'true'
 
     steps:
       - uses: actions/checkout@v2
