--- a/default.config.yml
+++ b/default.config.yml
@@ -184,8 +184,10 @@ vscode_extensions:
   - yummygum.city-lights-theme
 
 ohmyzsh_plugins:
-  - git
-  - fzf-zsh-plugin
+  - { name: git }
+  - { name: fzf-zsh-plugin, repo: https://github.com/unixorn/fzf-zsh-plugin.git }
+  - { name: zsh-completions, repo: https://github.com/zsh-users/zsh-completions.git }
+  - { name: zsh-syntax-highlighting, repo: https://github.com/zsh-users/zsh-syntax-highlighting.git }
 
 config_folder:
   - bat
