--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -3,13 +3,23 @@
     repo: "{{ item.repo }}"
     dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/plugins/{{ item.name }}"
     depth: 1
-  with_items:
-    - { name: fzf-zsh-plugin, repo: https://github.com/unixorn/fzf-zsh-plugin.git }
-    - { name: zsh-syntax-highlighting, repo: https://github.com/zsh-users/zsh-syntax-highlighting.git }
+  with_items: "{{ ohmyzsh_plugins | selectattr('repo', 'defined') }}"
 - name: Ensure custom zsh theme is present
   ansible.builtin.copy:
     src: "{{ playbook_dir }}/files/dots/.oh-my-zsh/custom/themes/robbyrussell-modified.zsh-theme"
     dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/themes/robbyrussell-modified.zsh-theme"
     owner: "{{ ansible_user }}"
     group: "{{ ansible_group }}"
-    mode: "u=rw,g=r,o=r"
+    mode: "preserve"
+- name: Ensure custom config is present
+  ansible.builtin.copy: # TODO: make sure the unwanted stuff is removed
+    src: "{{ playbook_dir }}/files/dots/.oh-my-zsh/custom/{{ item }}"
+    dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/{{ item }}"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_group }}"
+    mode: "preserve"
+  with_items:
+    - "aliases.zsh"
+    - "functions.zsh"
+    - "main.zsh"
+    - "applescript"
