--- a/playbook.yml
+++ b/playbook.yml
@@ -39,7 +39,7 @@
     - role: geerlingguy.mac.dock
       tags: ['dock']
       when: not ci
-    - role: gantsign.oh-my-zsh # TODO: this overrides the mamba snippet of the .zshrc file
+    - role: gantsign.oh-my-zsh # TODO: this overrides the mamba and pnpm snippets of the .zshrc file
       oh_my_zsh_theme: robbyrussell-modified
       oh_my_zsh_install: true
       oh_my_zsh_plugins: "{{ ohmyzsh_plugins | map(attribute='name') }}"
