--- a/tasks/keymap.yml
+++ b/tasks/keymap.yml
@@ -4,6 +4,6 @@
     dest: "{{ ansible_user_dir }}/Library/Keyboard Layouts/mac-xkb-adaptation.bundle"
     owner: "{{ ansible_user }}"
     group: "staff"
-    mode: 0755
+    mode: "0755"
     # you still need to select the layout in System Preferences > Keyboard > Input Sources
     # and potentially log out and back in
