--- a/tasks/vscode.yml
+++ b/tasks/vscode.yml
@@ -2,6 +2,7 @@
   ansible.builtin.file:
     path: "{{ ansible_env.HOME }}/Library/Application\ Support/Code/User"
     state: directory
+    mode: '0755'
 - name: Ensure settings.json symlink for vscode exists
   ansible.builtin.file:
     src: "{{ ansible_env.HOME }}/.config/vscode/settings.json"
